Fix last row of words in Quiz intro having more white space on the bottom

--- a/css/main.css
+++ b/css/main.css
@@ -248,7 +248,6 @@
 .kanjiQuiz-quiz-wordsBody {
     display: flex;
     flex-wrap: wrap;
-    margin-bottom: 3.125%;
 }
 
 .kanjiQuiz-quiz-wordDef {
